--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Heart-achoke Media</title>
-    <link rel="stylesheet" href="./assets/css/Assignment2.css">
+    <link rel="stylesheet" href="./Assets/Css/style.css">
   </head>
 
 <br>
